added portfolio to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -71,6 +71,11 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
+            <a href="/portfolio" class={activeNav === "portfolio" ? "active" : ""}>
+              Portfolio
+            </a>
+          </li>
+          <li>
             <LinkButton
               href="/search"
               className={`focus-outline p-3 sm:p-1 ${
